--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" type="text/css" href="assets/css/standard.css">
     
     <!-- Scripts -->
-    <script src="assets/js/jquery-3.3.1.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="assets/js/jquery.easing.1.3.js"></script>
     <script src="assets/js/standard.js"></script>
 
